Fixed image and text cropping issues when changing window sizes

--- a/CSS/gameDevPage/containerStyles.css
+++ b/CSS/gameDevPage/containerStyles.css
@@ -98,6 +98,11 @@
     display:flex;
 }
 
+.text_image
+{
+    width:100%;
+}
+
 /* Responsive Adjustments */
 @media (max-width: 960px) {
 
@@ -115,9 +120,6 @@
 
     .image__p figure
     {
-        padding: 0px;
-        padding-top: 30px;
-        padding-bottom:30px;
         align-items: center;
     }
 
